# Video_Editor

./: .clang-format  .clang-tidy  .gitignore  16ms  ARCHITECTURE.md  AUDIO_DEBUGGING_REPORT.md  AUDIO_ENGINE_ROADMAP.md  AUDIO_ENGINE_ROADMAP_FINAL_COMPLETION.md  AUDIO_ENGINE_WEEK9_WEEK10_AUDIT_REPORT.md  AUDIO_ROBUSTNESS_FIXES_COMPLETE.md  BUILD_GUIDE.md  CHATGPT_ANALYSIS_REQUEST.md  CHATGPT_AUDIO_ANALYSIS_REQUEST.md  CHATGPT_CRASH_ANALYSIS_REQUEST.md  CI_AUTOPILOT.md  CI_FIXER_PLAYBOOK.md  CI_QUALITY_GATE.md  CMakeLists.txt  CMakeListsTest.txt  CMakeLists_diagnostic.txt  CMakeLists_phase3_test.txt  CMakeLists_test.txt  CMakeLists_validation.txt  CMakePresets.json  COMPREHENSIVE_PHASE2_AUDIT_REPORT.md  COMPREHENSIVE_QT_CRASH_ANALYSIS_REPORT.md  CUMULATIVE_CRASH_ANALYSIS.md  CURRENT_CRASH_ANALYSIS_SEPTEMBER24_2025.md  Claude Opus 4.1.md  DECISIONS.md  ERROR_TRACKING.md  FORMAT_SUPPORT_ROADMAP.md  FPS_TIMING_ISSUE_FOR_CHATGPT.md  GITHUB_SETUP.md  GPU_DEBUG_TESTING_GUIDE.md  GPU_SYSTEM_ROADMAP.md  HARDWARE_ACCELERATION_STATUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  LOUDNESS_MONITOR_ANALYSIS.md  (+152 more)
Video_Player/: CMakeLists.txt  README.md  imgui.ini
Video_Player/src/: AudioManager.cpp  AudioManager.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
src/app/: CMakeLists.txt  README.md
src/app/src/: application.cpp
src/audio/: CMakeLists.txt  README.md  audio_thumbnail.cpp  waveform_cache.cpp  waveform_generator.cpp
src/audio/src/: audio_buffer_pool.cpp  audio_clock.cpp  audio_effects.cpp  audio_engine.cpp  audio_frame.cpp  audio_meters.cpp  audio_output.cpp  audio_pipeline.cpp  audio_render_engine.cpp  decoder.cpp  export_presets.cpp  ffmpeg_audio_decoder.cpp  ffmpeg_audio_encoder.cpp  latency_compensator.cpp  loudness_monitor.cpp  master_clock.cpp  mixing_graph.cpp  professional_monitoring.cpp  quality_dashboard.cpp  sample_rate_converter.cpp  simple_mixer.cpp  sync_validator.cpp  test_decoder.cpp  timeline_audio_manager.cpp
src/audio/validation/: audio_engine_phase1_week1_validation.cpp  audio_engine_phase1_week1_validation_simple.cpp
src/cache/: CMakeLists.txt  README.md
src/cache/src/: cache_placeholder.cpp
src/commands/: CMakeLists.txt  README.md
src/commands/src/: command.cpp  timeline_commands.cpp
src/core/: CMakeLists.txt  README.md  crash_trap.cpp  crash_trap.hpp  math.hpp  types.hpp
src/core/src/: crash_handler.cpp  job_system.cpp  log.cpp  profiling.cpp  time.cpp
src/decode/: CMakeLists.txt  README.md
src/decode/src/: async_decoder.cpp  audio_resampler.cpp  codec_optimizer.cpp  color_convert.cpp  d3d11_platform.hpp  decoder.cpp  gpu_upload_stub.cpp  playback_controller.cpp  qt_playback_controller.cpp  video_decoder_ffmpeg.cpp
src/gfx/: CMakeLists.txt  README.md  advanced_shader_effects.hpp  color_accuracy_validator.cpp  color_grading_lut_generator.cpp  compute_implementation.cpp  compute_shader_system.cpp  compute_shader_system.hpp  detailed_profiler.hpp  detailed_profiler_impl.cpp  gpu_error_handler.cpp  gpu_error_handler.hpp  gpu_histogram_temporal.hpp  gpu_memory_optimizer.cpp  gpu_memory_optimizer.hpp  gpu_performance_dashboard.cpp  gpu_performance_dashboard.hpp  gpu_system_coordinator.cpp  gpu_test_suite.cpp  gpu_test_suite.hpp  graphics_device.hpp  graphics_device_bridge.cpp  graphics_device_bridge.hpp  graphics_device_factory.hpp  graphics_device_factory_impl.cpp  hardware_acceleration.hpp  hardware_acceleration_impl.cpp  hdr_content_analyzer.cpp  hdr_metadata_parser.cpp  hdr_processor.cpp  integrated_gpu_manager.cpp  memory_aware_uploader.cpp  monitor_calibration_system.cpp  multi_gpu_implementation.cpp  multi_gpu_system.hpp  optimized_memory_pool.hpp  parallel_effects.hpp  performance_adaptive_renderer.cpp  performance_optimizer.hpp  performance_optimizer_impl.cpp  (+4 more)
src/gfx/shaders/: advanced_effects.hlsl  color_grading.hlsl  spatial_effects.hlsl  temporal_effects.hlsl
src/gfx/src/: async_renderer.cpp  effect_nodes.cpp  gpu_memory_manager.cpp  performance_monitor.cpp  render_graph.cpp  streaming_uploader.cpp  vk_device.cpp  vk_device_backup.cpp  vk_device_minimal.cpp  vk_device_new.cpp  vk_instance.cpp
src/media_io/: CMakeLists.txt  README.md  format_detector.cpp
src/media_io/src/: color_management.cpp  container_formats.cpp  demuxer.cpp  dnxhd_support.cpp  dv_format_support.cpp  format_detector.cpp  hdr_infrastructure.cpp  hdr_utilities.cpp  high_bitdepth_support.cpp  high_resolution_support.cpp  interlaced_processing.cpp  legacy_format_support.cpp  log_format_support.cpp  media_probe.cpp  modern_codec_format_integration.cpp  modern_codec_support.cpp  performance_optimizer.cpp  prores_support.cpp  raw_format_support.cpp
src/playback/: CMakeLists.txt  README.md
src/playback/src/: controller.cpp
src/render/: CMakeLists.txt  README.md
src/render/shaders/: color_correction.hlsl  gaussian_blur.hlsl  lut_application.hlsl  sharpen.hlsl  transform.hlsl  yuv_to_rgb.hlsl
src/render/src/: gpu_frame_resource.cpp  gpu_render_graph.cpp  nodes.cpp  render_graph.cpp  shader_renderer.cpp
src/timeline/: CMakeLists.txt  README.md
src/timeline/src/: timeline.cpp  track.cpp
src/tools/qt_preview/: CMakeLists.txt
src/tools/video_editor/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  README.md  UiUpdateGuard.h
src/ui/src/: audio_meters_widget.cpp  audio_track_widget.cpp  gl_video_widget.cpp  main_window.cpp  (+8 more)
src/video/: CMakeLists.txt  UiImageFrame.cpp  UiImageFrame.h
tests/: CMakeLists.txt  FLAKY_TESTS.txt  test_color_convert.cpp  test_color_convert_guards.cpp  test_command_coalescing.cpp  test_commands.cpp  test_commands_macro_and_random.cpp  test_decoder.cpp  test_frame_cache.cpp  test_gfx_headers.cpp  test_gpu_memory_optimizer.cpp  test_hdr_infrastructure.cpp  test_media_probe.cpp  test_persistence.cpp  test_playback_scheduler.cpp  test_profiling.cpp  test_profiling_stats.cpp  test_project_roundtrip.cpp  test_time.cpp  test_time_benchmark.cpp  test_timeline_additional_invariants.cpp  test_timeline_basic.cpp  test_timeline_invariants.cpp  test_ui_smoke.cpp
tests/integration/: COMPREHENSIVE_INTEGRATION_TESTS.md
(+251 files in other folders)
